feat: add services filters
