# src/user/entities/user.entity.ts
@@ -6,6 +6,7 @@ import {
   UpdateDateColumn,
   OneToMany,
 } from 'typeorm';
+import { Exclude } from 'class-transformer';
 import { Service } from '../../service/entities/service.entity';
 import { Contract } from '../../contract/entities/contract.entity';
 import { Review } from '../../review/entities/review.entity';
@@ -49,6 +50,7 @@ export class User {
     example: '********',
   })
   @Column()
+  @Exclude()
   password: string;
 
   @ApiProperty({
@@ -58,6 +60,34 @@ export class User {
   })
   @Column({ nullable: true })
   avatar: string;
+
+  @ApiProperty({
+    description: 'Ubicación del usuario',
+    required: false,
+    example: {
+      latitude: 19.4326,
+      longitude: -99.1332,
+      address: 'Avenida Reforma 123, Ciudad de México',
+      streetName: 'Avenida Reforma',
+      streetNumber: '123',
+      city: 'Ciudad de México',
+      province: 'CDMX',
+      postalCode: '06500',
+      country: 'México',
+    },
+  })
+  @Column('json', { nullable: true })
+  location: {
+    latitude: number;
+    longitude: number;
+    address: string;
+    streetName: string;
+    streetNumber: string;
+    city: string;
+    province: string;
+    postalCode: string;
+    country: string;
+  };
 
   @ApiProperty({
     description: 'Estado activo del usuario',
